--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,60 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+
+  <div class="d-flex">
+   <!-- text left of carousel  -->
+   <div>
+    <h1>Fund</h1>
+    <h4>local restaurants where you enjoy to eat</h4>
+  </div>
+
+  <!-- carousel -->
+  <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-interval="10000">
+        <img src="https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="restaurant pic">
+      </div>
+      <div class="carousel-item" data-interval="2000">
+        <img src="https://images.unsplash.com/photo-1552302894-3b4f7275229c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="chef pic">
+      </div>
+      <div class="carousel-item">
+        <img src="https://images.unsplash.com/photo-1529417305485-480f579e7578?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2609&q=80" class="d-block w-100" alt="coffee bar pic">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+  <!-- text right of carousel  -->
+  <div>
+    <h4>We love the ambitous, the creative and the determined restaurants who are on a mission to leave a mark on Argentina</h4>
+  </div>
+  <!-- flexbox closing div -->
+</div>
+
+<!-- choose investing or raising -->
+<div class="choose-option d-flex">
+  <div class="d-flex flex-column w-50 justify-content-center text-center">
+    <h5>Interested in Investing?</h5>
+    <h5><%= link_to "Investments", "#", class: "btn btn-secondary" %></h5>
+  </div>
+  <div class="h-75 ">
+  </div>
+  <div class="d-flex flex-column w-50 justify-content-center text-center">
+    <h5>Interested in Raising?</h5>
+    <h5><%= link_to "Raising", "#", class: "btn btn-secondary" %></h5>
+  </div>
+</div>
+
+<!-- investment figures -->
+<div>
+
+</div>
+
+<!-- container closing DIV -->
+</div>
