--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,26 +35,75 @@
     <h4>We love the ambitous, the creative and the determined restaurants who are on a mission to leave a mark on Argentina</h4>
   </div>
   <!-- flexbox closing div -->
-</div>
-
-<!-- choose investing or raising -->
-<div class="choose-option d-flex">
-  <div class="d-flex flex-column w-50 justify-content-center text-center">
-    <h5>Interested in Investing?</h5>
-    <h5><%= link_to "Investments", "#", class: "btn btn-secondary" %></h5>
   </div>
-  <div class="h-75 ">
-  </div>
-  <div class="d-flex flex-column w-50 justify-content-center text-center">
-    <h5>Interested in Raising?</h5>
-    <h5><%= link_to "Raising", "#", class: "btn btn-secondary" %></h5>
-  </div>
-</div>
 
-<!-- investment figures -->
-<div>
+  <!-- choose investing or raising -->
+  <div class="choose-option d-flex justify-content-center">
+    <div class="d-flex flex-column w-50 justify-content-center text-center">
+      <h5>Interested in Investing?</h5>
+      <h5><%= link_to "Investments", "#", class: "btn btn-secondary" %></h5>
+    </div>
+    <div class="h-75 ">
+    </div>
+    <div class="d-flex flex-column w-50 justify-content-center text-center">
+      <h5>Interested in Raising?</h5>
+      <h5><%= link_to "Raising", "#", class: "btn btn-secondary" %></h5>
+    </div>
+  </div>
 
-</div>
+  <!-- investment figures -->
+  <div class="d-flex">
+    <div>
+      <h1>70m</h1>
+      <h4>since last investment</h4>
+    </div>
+
+    <div>
+      <h1>23 restaurants</h1>
+      <h4>funded</h4>
+    </div>
+
+    <div>
+      <h1>681</h1>
+      <h4>investors served</h4>
+    </div>
+  </div>
+
+  <div class="investment-card">
+    <h1>Tipo Siete</h1>
+  </div>
+
+  <h5><%= link_to "SHOW MORE", "#", class: "btn btn-secondary" %></h5>
+
+  <div class="d-flex">>
+    <div>
+      PICTURE placeholder
+    </div>
+    <div>
+      <h1>Support entrepreneurs on a mission</h1>
+      <p>Take a look at live investment opportunities on Fundeat today, and give yourself a feel-good factor that's hard to beat by backing a restaurant you believe in.</p>
+    </div>
+  </div>
+
+  <div class="d-flex">>
+    <div>
+      <h1>Create change in your community</h1>
+      <p>Build a better neighboorhoud, a better city and a better country. Change happens when people feel empowered. Take an active role and make dreams come true.</p>
+    </div>
+    <div>
+      PICTURE placeholder
+    </div>
+
+  </div>
+    <p>We're proud to fund great entrepreneurs.</p>
+    <p>Because we know Argentina would be a lot less interesting without them.</p>
+    <br>
+    <p><strong>Are you with us?</strong></p>
+    <h5><%= link_to "FUND RESTAURANTS", "#", class: "btn btn-secondary" %></h5>
+  <div>
+
+  </div>
+
 
 <!-- container closing DIV -->
 </div>
