landing page changed

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,21 @@
 body {
   background-color: white;
 }
+
+.choose-option {
+  width: 800px;
+  height: 150px;
+  border-radius: 10px;
+  background-color: #F3F3F3;
+}
+
+.pic-home {
+  width: 430px;
+  height: 250px;
+  border-radius: 10px;
+}
+
+.text-box {
+  width: 20%;
+  text-align: center;
+}
