--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,58 +1,63 @@
 <div class="container">
 
-  <div class="d-flex">
-   <!-- text left of carousel  -->
-   <div>
-    <h1>Fund</h1>
-    <h4>local restaurants where you enjoy to eat</h4>
-  </div>
-
-  <!-- carousel -->
-  <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-interval="10000">
-        <img src="https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="restaurant pic">
-      </div>
-      <div class="carousel-item" data-interval="2000">
-        <img src="https://images.unsplash.com/photo-1552302894-3b4f7275229c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="chef pic">
-      </div>
-      <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1529417305485-480f579e7578?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2609&q=80" class="d-block w-100" alt="coffee bar pic">
-      </div>
+<div style="height: 100vh; margin-top: 80px;">
+  <div class="d-flex justify-content-center" style="height: 425px; ">
+     <!-- text left of carousel  -->
+     <div class="text-box align-self-center mr-3">
+      <h1>Fund</h1>
+      <h4>local restaurants where you enjoy to eat</h4>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
 
-  <!-- text right of carousel  -->
-  <div>
-    <h4>We love the ambitous, the creative and the determined restaurants who are on a mission to leave a mark on Argentina</h4>
-  </div>
+    <!-- carousel -->
+    <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-interval="10000">
+          <img src="https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="restaurant pic">
+        </div>
+        <div class="carousel-item" data-interval="2000">
+          <img src="https://images.unsplash.com/photo-1552302894-3b4f7275229c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" class="d-block w-100" alt="chef pic">
+        </div>
+        <div class="carousel-item">
+          <img src="https://images.unsplash.com/photo-1529417305485-480f579e7578?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2609&q=80" class="d-block w-100" alt="coffee bar pic">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <!-- text right of carousel  -->
+    <div class="text-box align-self-center ml-3">
+      <h4>We love the ambitous, the creative and the determined restaurants who are on a mission to leave a mark on Argentina</h4>
+    </div>
   <!-- flexbox closing div -->
   </div>
 
   <!-- choose investing or raising -->
-  <div class="choose-option d-flex justify-content-center">
-    <div class="d-flex flex-column w-50 justify-content-center text-center">
-      <h5>Interested in Investing?</h5>
-      <h5><%= link_to "Investments", "#", class: "btn btn-secondary" %></h5>
-    </div>
-    <div class="h-75 ">
-    </div>
-    <div class="d-flex flex-column w-50 justify-content-center text-center">
-      <h5>Interested in Raising?</h5>
-      <h5><%= link_to "Raising", "#", class: "btn btn-secondary" %></h5>
+  <div class="d-flex justify-content-center my-4">
+    <div class="choose-option d-flex">
+      <div class="d-flex flex-column w-50 justify-content-center text-center">
+        <h5>Interested in Investing?</h5>
+        <h5><%= link_to "Investments", "#", class: "btn btn-secondary" %></h5>
+      </div>
+      <!-- line -->
+      <div class="h-75 align-self-center" style="border: 1px solid lightgrey" >
+      </div>
+
+      <div class="d-flex flex-column w-50 justify-content-center text-center">
+        <h5>Interested in Raising?</h5>
+        <h5><%= link_to "Raising", "#", class: "btn btn-secondary" %></h5>
+      </div>
     </div>
   </div>
 
   <!-- investment figures -->
-  <div class="d-flex">
+  <div class="d-flex text-center justify-content-center my-4">
     <div>
       <h1>70m</h1>
       <h4>since last investment</h4>
@@ -69,39 +74,37 @@
     </div>
   </div>
 
+<!-- view height div -->
+</div>
+
   <div class="investment-card">
     <h1>Tipo Siete</h1>
   </div>
 
   <h5><%= link_to "SHOW MORE", "#", class: "btn btn-secondary" %></h5>
 
-  <div class="d-flex">>
-    <div>
-      PICTURE placeholder
-    </div>
-    <div>
+  <div class="d-flex my-4">
+      <img class="pic-home" src="https://images.unsplash.com/photo-1470784790053-6c2f15489967?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2241&q=80" alt="home pic 1">
+    <div class="ml-4">
       <h1>Support entrepreneurs on a mission</h1>
       <p>Take a look at live investment opportunities on Fundeat today, and give yourself a feel-good factor that's hard to beat by backing a restaurant you believe in.</p>
     </div>
   </div>
 
-  <div class="d-flex">>
-    <div>
+  <div class="d-flex my-4">
+    <div class="mr-4">
       <h1>Create change in your community</h1>
       <p>Build a better neighboorhoud, a better city and a better country. Change happens when people feel empowered. Take an active role and make dreams come true.</p>
     </div>
-    <div>
-      PICTURE placeholder
-    </div>
-
+      <img class="pic-home" src="https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="home pic 2">
   </div>
+
+  <div class="d-flex flex-column text-center">
     <p>We're proud to fund great entrepreneurs.</p>
     <p>Because we know Argentina would be a lot less interesting without them.</p>
     <br>
     <p><strong>Are you with us?</strong></p>
     <h5><%= link_to "FUND RESTAURANTS", "#", class: "btn btn-secondary" %></h5>
-  <div>
-
   </div>
 
 
