--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -74,10 +74,12 @@
     </div>
   </div>
 
-<!-- view height div -->
+<!-- view height 100 div -->
 </div>
 
-  <div class="investment-card">
+  <div class="card-investment">
+    <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
+    <img src="" alt="">
     <h1>Tipo Siete</h1>
   </div>
 
