--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -12,9 +12,14 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
-.avatar-square {
-  width: 40px;
-  border-radius: 0px;
+
+
+
+
+.avatar-m-square {
+  width: 80px;
+  height: 80px;
+  border-radius: 20px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border: 1px solid grey;
 }
