--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,3 +1,4 @@
+// Le wagon avatars
 .avatar {
   width: 40px;
   border-radius: 50%;
@@ -16,6 +17,7 @@
 
 
 
+// Fundeat avatars
 .avatar-m-square {
   width: 80px;
   height: 80px;
