adjusted investment card alignment

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -92,13 +92,15 @@
       <h5>10 days left</h5>
       <h1>Tipo Siete</h1>
       <p>A quality and relaxing rural country pub, run by award winning owners. The building and decor are charming and rustic, with elegant modern touches overlooking open country fields or in a pretty courtyard filled with flowers in the summer months.</p>
-      <h4>$100,000 target</h4>
+      <div class="box-align">
+        <h4>$100,000 target</h4>
+      </div>
       <div class="target-bar">
-        <div class="target-bar percentage">
-          <p>79%</p>
+        <div class="target-bar-percentage">
+          <p class="h-100">79%</p>
         </div>
       </div>
-      <div class="d-flex mt-2 justify-content-around">
+      <div class="box-align d-flex justify-content-between">
         <div class="text-center">
           <h4>$79,540</h4>
           <p>raised</p>
