--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -24,19 +24,26 @@
 }
 
 .target-bar {
-  width: 350px;
+  width: 340px;
   height: 30px;
   border-radius: 8px;
   background-color: white;
-  margin-left: 20px;
+  margin: 20px;
 }
 
-.target-bar.percentage {
+.target-bar-percentage {
   margin-left: 0px;
   width: 79%;
+  height: 30px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
   background-color: lightgrey;
   color: white;
   font-weight: bold;
+}
+
+.box-align {
+  margin: 2px 20px;
 }
 
 // fonts and headers
@@ -48,14 +55,14 @@
 
 .card-investment h4 {
   margin-top: 10px;
-  margin-left: 20px;
   font-size: 20px;
   font-weight: bold;
 }
 
 .card-investment h5{
   margin-top: 10px;
-  margin-left: 265px;
+  margin-right: 20px;
+  text-align: right;
   // margin-right: 15px;
 }
 
