--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -97,7 +97,7 @@
       </div>
       <div class="target-bar">
         <div class="target-bar-percentage">
-          <p class="h-100">79%</p>
+          <p class="w-100 align-self-center">79%</p>
         </div>
       </div>
       <div class="box-align d-flex justify-content-between">
