--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -40,6 +40,7 @@
   background-color: lightgrey;
   color: white;
   font-weight: bold;
+  display: flex;
 }
 
 .box-align {
@@ -63,7 +64,12 @@
   margin-top: 10px;
   margin-right: 20px;
   text-align: right;
-  // margin-right: 15px;
+}
+
+.card-investment h6{
+  margin: 0px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .card-investment p{
