--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,7 +43,7 @@
     <div class="choose-option d-flex">
       <div class="d-flex flex-column w-50 justify-content-center text-center">
         <h5>Interested in Investing?</h5>
-        <h5><%= link_to "Investments", "#", class: "btn btn-secondary" %></h5>
+        <h5><%= link_to "Investments", "/investments", class: "btn btn-secondary" %></h5>
       </div>
       <!-- line -->
       <div class="h-75 align-self-center" style="border: 1px solid lightgrey">
@@ -123,7 +123,7 @@
   </div>
 
   <div class="d-flex justify-content-center">
-    <h5 class="mt-5"><%= link_to "SHOW MORE", "#", class: "btn btn-secondary" %></h5>
+    <h5 class="mt-5"><%= link_to "SHOW MORE", "/investments", class: "btn btn-secondary" %></h5>
   </div>
 
   <!-- horizontal line -->
@@ -156,7 +156,7 @@
     <p>Because we know Argentina would be a lot less interesting without them.</p>
     <br>
     <p><strong>Are you with us?</strong></p>
-    <h5><%= link_to "FUND RESTAURANTS", "#", class: "btn btn-secondary" %></h5>
+    <h5><%= link_to "FUND RESTAURANTS", "/investments", class: "btn btn-secondary" %></h5>
   </div>
 
 <!-- container closing DIV -->
