index page set-up

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -2,7 +2,9 @@
   height: 540px;
   width: 380px;
   background-color: #F3F3F3;
-  border-radius: 20px
+  border-radius: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .card-pic {
