--- a/app/views/investments/index.html.erb
+++ b/app/views/investments/index.html.erb
@@ -1,16 +1,16 @@
 
 <!-- app/views/scooters/index.html.erb -->
-<div class="banner-index" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1494859802809-d069c3b71a8a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80);">
+<div class="banner-index">
   <div class="container">
     <div class="text-center">
-      <h3 class="banner-title">Make a change!</h3>
+      <h3 class="banner-title">Fund with your gut!</h3>
     </div>
   </div>
 </div>
 
   <!-- investment card -->
   <div class="d-flex justify-content-center">
-    <div class="card-investment mx-3">
+    <div class="card-investment">
       <div class="card-user">
         <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
       </div>
