--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -83,7 +83,7 @@
 
   <!-- investment card -->
   <div class="d-flex justify-content-center">
-    <div class="card-investment mx-3">
+    <div class="card-investment">
       <div class="card-user">
         <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
       </div>
