changed investment links into campaigns links

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,2 +1,49 @@
-<h1>Campaigns#index</h1>
-<p>Find me in app/views/campaigns/index.html.erb</p>
+<!-- app/views/scooters/index.html.erb -->
+<div class="banner-index">
+  <div class="container">
+    <div class="text-center">
+      <h3 class="banner-title">Fund with your gut!</h3>
+    </div>
+  </div>
+</div>
+
+  <!-- investment card -->
+  <div class="d-flex justify-content-center">
+    <div class="card-investment">
+      <div class="card-user">
+        <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
+      </div>
+      <!-- background pic -->
+      <img class="card-pic"src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="food pic">
+      <h5>10 days left</h5>
+      <h1>Tipo Siete</h1>
+      <p>A quality and relaxing rural country pub, run by award winning owners. The building and decor are charming and rustic, with elegant modern touches overlooking open country fields or in a pretty courtyard filled with flowers in the summer months.</p>
+      <div class="box-align">
+        <h4>$100,000 target</h4>
+      </div>
+      <div class="target-bar">
+        <div class="target-bar-percentage">
+          <p class="w-100 align-self-center">79%</p>
+        </div>
+      </div>
+      <div class="box-align d-flex justify-content-between">
+        <div class="text-center">
+          <h4>$79,540</h4>
+          <p>raised</p>
+        </div>
+        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+        </div>
+        <div class="text-center">
+          <h4>5%</h4>
+          <p>interest</p>
+        </div>
+        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+        </div>
+        <div class="text-center">
+          <h4>119</h4>
+          <p>investors</p>
+        </div>
+      </div>
+    </div>
+<!-- investmet card closing div -->
+  </div>
