--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to "Investing", "/investments", class: "nav-link" %>
+        <%= link_to "Investing", "/campaigns", class: "nav-link" %>
       </li>
       <li class="nav-item active">
         <%= link_to "Raising", "/my_campaigns", class: "nav-link" %>
