--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,7 +4,8 @@
 @import "navbar";
 @import "footer";
 @import "carousel";
-@import "cards";
+@import "card-invest";
+@import "card-investment";
 @import "banner";
 
 
