--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,2 +1,75 @@
 <h1>Campaigns#show</h1>
-<p>Find me in app/views/campaigns/show.html.erb</p>
+
+<!-- investment card -->
+  <div class="d-flex justify-content-center">
+    <div class="card-invest">
+      <!-- invest field and button -->
+      <div class="d-flex justify-content-center">
+          <p class="input-field align-self-center">$ ..........</p>
+          <div class="align-self-center">
+            <h5><%= link_to "INVEST", "/#", class: "btn btn-secondary" %></h5>
+          </div>
+      </div>
+
+      <!-- campaign stats -->
+      <div class="my-2 mx-3 d-flex justify-content-between">
+        <div class="text-center">
+          <h4>5%</h4>
+          <p>interest</p>
+        </div>
+        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+        </div>
+        <div class="text-center">
+          <h4>48</h4>
+          <p>months</p>
+        </div>
+        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+        </div>
+        <div class="text-center">
+          <h4>$100,000</h4>
+          <p>target</p>
+        </div>
+      </div>
+
+      <div class="my-1 d-flex flex-column justify-content-between">
+        <!-- investment -->
+        <div class="my-2 mx-3">
+          <h5>My investment</h5>
+          <h4>$100</h4>
+          <!-- range slider  -->
+          <div class="range">
+
+          </div>
+        </div>
+
+        <!-- return section -->
+        <div class="my-2 mx-3">
+          <h5>My return</h5>
+          <div class="d-flex justify-content-around">
+            <div class="d-flex flex-column text-center">
+              <h4>$2.5</h4>
+              <p>per month</p>
+            </div>
+            <div>X</div>
+            <div class="d-flex flex-column text-center">
+              <h4>48</h4>
+              <p>months</p>
+            </div>
+            <div>=</div>
+            <div class="d-flex flex-column text-center">
+              <h4>$120</h4>
+              <p>total</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- rewards section -->
+        <div class="my-2 mx-3">
+          <h5>My rewards</h5>
+          <p>1x dinner</p>
+        </div>
+
+       </div>
+<!-- investment card closing div -->
+    </div>
+  </div>
