form field for input

--- a/app/assets/stylesheets/components/_card-invest.scss
+++ b/app/assets/stylesheets/components/_card-invest.scss
@@ -11,7 +11,7 @@
   height: 35px;
   border-radius: 8px;
   background-color: white;
-  margin: 20px;
+  // margin: 20px;
 }
 
 .card-invest .range {
