--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -4,9 +4,9 @@
   <div class="d-flex justify-content-center">
     <div class="card-invest">
       <!-- invest field and button -->
-      <%= simple_form_for @investment do |f| %>
+      <%= simple_form_for ([@campaign, @investment]) do |f| %>
       <div class="d-flex justify-content-center">
-        <%= f.input :amount, class: "input-field", placeholder: "$250", label: false %>
+        <%= f.input :amount, class: "input-field", placeholder: "$250", label: false, :required => true %>
         <%= f.submit "INVEST", class: "btn btn-secondary align-self-center" %>
       <% end %>
       </div>
