--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <div style="position: relative;">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -93,9 +92,10 @@
   <div class="d-flex justify-content-center">
     <div class="card-invest">
       <!-- invest field and button -->
-      <%= simple_form_for ([@campaign, @investment]) do |f| %>
+      <%= simple_form_for [@campaign, @investment], url: new_campaign_investment_path(@campaign), method: :get do |f| %>
       <div class="d-flex justify-content-center">
         <%= f.input :amount, class: "input-field", placeholder: "$250", label: false, :required => true %>
+        <%= f.input :reward, as: :radio_buttons, collection: %w(1 2 3) %>
         <%= f.submit "INVEST", class: "btn btn-secondary align-self-center" %>
       <% end %>
       </div>
