work paused - js inlined

--- a/app/views/campaigns/shared/_showinvestor.html.erb
+++ b/app/views/campaigns/shared/_showinvestor.html.erb
@@ -32,7 +32,7 @@
 </div>
 
 <div class="container" style="margin-top: -50px;">
-  <div class="row" style="top: 250px;">
+  <div class="row">
     <div class="col-md-8">
       <!-- COMPANY LOGO -->
       <div class="restaurant-logo">
@@ -136,8 +136,8 @@
             <div class="my-1 d-flex flex-column justify-content-between">
               <!-- range slider  -->
               <div class="investment-slider my-3">
-                <label for="customRange" style="font-size: 12px;">Investment</label>
-                <input type="range" class="custom-range" min="100" max="1000" step="20" id="customRange3">
+                <label for="investmentRange" style="font-size: 12px;">Investment</label>
+                <input type="range" class="investment-range" min="100" max="1000" step="10" id="investmentRange">
               </div>
             </div>
 
@@ -163,7 +163,7 @@
 
             <!-- rewards section -->
             <div class="mt-4">
-              <h5>My rewards</h5>
+              <h5 style="font-size: 12px;">My reward</h5>
               <div class="d-flex align-items-center px-3 py-1" style="background-color: lightgrey; border-radius: 50px;">
                 <i class="fas fa-gift"></i>
                 <p class="m-0 ml-4">1x dinner</p>
