--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -89,77 +89,86 @@
 </div>
 
 <!-- investment card -->
-  <div class="d-flex justify-content-center">
-    <div class="card-invest">
-      <!-- invest field and button -->
-      <%= simple_form_for [@campaign, @investment], url: new_campaign_investment_path(@campaign), method: :get do |f| %>
-      <div class="d-flex justify-content-center">
-        <%= f.input :amount, class: "input-field", placeholder: "$250", label: false, :required => true %>
-        <%= f.input :reward, as: :radio_buttons, collection: %w(1 2 3) %>
-        <%= f.submit "INVEST", class: "btn btn-secondary align-self-center" %>
+<div class="d-flex justify-content-center">
+  <div class="card-invest">
+    <!-- invest field and button -->
+    <%= simple_form_for [@campaign, @investment], url: new_campaign_investment_path(@campaign, ), method: :get do |f| %>
+    <div class="d-flex justify-content-center">
+      <%= f.input :amount, class: "input-field", placeholder: "$250", label: false, :required => true %>
+      <%= f.input :reward, as: :radio_buttons, collection: %w(1 2 3) %>
+      <%= f.submit "INVEST", class: "btn btn-secondary align-self-center" %>
       <% end %>
-      </div>
-
-      <!-- campaign stats -->
-      <div class="my-2 mx-3 d-flex justify-content-between">
-        <div class="text-center">
-          <h4>5%</h4>
-          <p>interest</p>
-        </div>
-        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-        </div>
-        <div class="text-center">
-          <h4>48</h4>
-          <p>months</p>
-        </div>
-        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-        </div>
-        <div class="text-center">
-          <h4>$100,000</h4>
-          <p>target</p>
-        </div>
-      </div>
-
-      <div class="my-1 d-flex flex-column justify-content-between">
-        <!-- investment -->
-        <div class="my-2 mx-3">
-          <h5>My investment</h5>
-          <h4>$100</h4>
-          <!-- range slider  -->
-          <div class="range">
-
-          </div>
-        </div>
-
-        <!-- return section -->
-        <div class="my-2 mx-3">
-          <h5>My return</h5>
-          <div class="d-flex justify-content-around">
-            <div class="d-flex flex-column text-center">
-              <h4>$2.5</h4>
-              <p>per month</p>
-            </div>
-            <div>X</div>
-            <div class="d-flex flex-column text-center">
-              <h4>48</h4>
-              <p>months</p>
-            </div>
-            <div>=</div>
-            <div class="d-flex flex-column text-center">
-              <h4>$120</h4>
-              <p>total</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- rewards section -->
-        <div class="my-2 mx-3">
-          <h5>My rewards</h5>
-          <p>1x dinner</p>
-        </div>
-
-       </div>
-<!-- investment card closing div -->
     </div>
+
+
+
+
+    # app/views/teddies/show.html.erb
+    <%= form_tag orders_path do %>
+    <%= hidden_field_tag 'teddy_id', @teddy.id %>
+    <%= submit_tag 'Purchase', class: 'btn btn-primary' %>
+    <% end %>
+
+    <!-- campaign stats -->
+    <div class="my-2 mx-3 d-flex justify-content-between">
+      <div class="text-center">
+        <h4>5%</h4>
+        <p>interest</p>
+      </div>
+      <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+      </div>
+      <div class="text-center">
+        <h4>48</h4>
+        <p>months</p>
+      </div>
+      <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+      </div>
+      <div class="text-center">
+        <h4>$100,000</h4>
+        <p>target</p>
+      </div>
+    </div>
+
+    <div class="my-1 d-flex flex-column justify-content-between">
+      <!-- investment -->
+      <div class="my-2 mx-3">
+        <h5>My investment</h5>
+        <h4>$100</h4>
+        <!-- range slider  -->
+        <div class="range">
+
+        </div>
+      </div>
+
+      <!-- return section -->
+      <div class="my-2 mx-3">
+        <h5>My return</h5>
+        <div class="d-flex justify-content-around">
+          <div class="d-flex flex-column text-center">
+            <h4>$2.5</h4>
+            <p>per month</p>
+          </div>
+          <div>X</div>
+          <div class="d-flex flex-column text-center">
+            <h4>48</h4>
+            <p>months</p>
+          </div>
+          <div>=</div>
+          <div class="d-flex flex-column text-center">
+            <h4>$120</h4>
+            <p>total</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- rewards section -->
+      <div class="my-2 mx-3">
+        <h5>My rewards</h5>
+        <p>1x dinner</p>
+      </div>
+
+    </div>
+    <!-- investment card closing div -->
   </div>
+</div>
 
