changed seeds and show methodology

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in? && current_user.user_type == 'true' %>
+<% if user_signed_in? && current_user.owner == true %>
   <p>Internal note: You are an owner</p>
   <%= render "campaigns/shared/showowner" %>
   <%#= render "devise/shared/links" %>
