--- a/app/views/campaigns/shared/_showinvestor.html.erb
+++ b/app/views/campaigns/shared/_showinvestor.html.erb
@@ -135,10 +135,12 @@
 
             <div class="my-1 d-flex flex-column justify-content-between">
               <!-- range slider  -->
-              <div class="investment-slider my-3">
-                <label for="investmentRange" style="font-size: 12px;">Investment</label>
-                <input type="range" class="investment-range" min="100" max="1000" step="10" id="investmentRange">
-              </div>
+              <form>
+                <div class="investment-slider my-3">
+                  <label for="investmentRange" style="font-size: 12px;">Investment</label>
+                  <input type="range" class="investment-range" min="100" max="1000" step="10" id="investmentRange">
+                </div>
+              </form>
             </div>
 
             <!-- return section -->
