--- a/app/assets/stylesheets/components/_card-invest.scss
+++ b/app/assets/stylesheets/components/_card-invest.scss
@@ -1,9 +1,16 @@
+
+.card-wrapper {
+  margin: 25px;
+
+}
+
 .card-invest {
   height: 460px;
   width: 370px;
   background-color: #F3F3F3;
   border-radius: 20px;
-  margin: 20px;
+  margin-top: 25px;
+
 }
 
 .card-invest .input-field {
