--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,49 +1,102 @@
 <!-- app/views/scooters/index.html.erb -->
+
+<%# if @campaigns.any? %>
+  <%#flash[:alert] = "We have found #{@campaigns.count(:id)} campaigns of your taste! " %>
+   <%# else %>
+<%# end %>
+
 <div class="banner-index">
   <div class="container">
-    <div class="text-center">
-      <h3 class="banner-title">Fund with your gut!</h3>
+    <div class="text-center align-items-center">
+      <h3 class="banner-title">Fund your taste!</h3>
     </div>
   </div>
 </div>
 
-  <!-- investment card -->
-  <div class="d-flex justify-content-center">
-    <div class="card-investment">
-      <div class="card-user">
-        <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
-      </div>
-      <!-- background pic -->
-      <img class="card-pic"src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="food pic">
-      <h5>10 days left</h5>
-      <h1>Tipo Siete</h1>
-      <p>A quality and relaxing rural country pub, run by award winning owners. The building and decor are charming and rustic, with elegant modern touches overlooking open country fields or in a pretty courtyard filled with flowers in the summer months.</p>
-      <div class="box-align">
-        <h4>$100,000 target</h4>
-      </div>
-      <div class="target-bar">
-        <div class="target-bar-percentage">
-          <p class="w-100 align-self-center">79%</p>
+
+  <!-- <div class="d-flex justify-content-center"> -->
+  <div class="d-flex flex-wrap justify-content-around">
+
+    <% @campaigns.each do |campaign| %>
+    <div class="card-wrapper">
+      <!-- investment card -->
+        <div class="card-investment">
+            <div class="card-user">
+              <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
+            </div>
+        <!-- background pic -->
+<!-- insert company.photo -->
+            <img class="card-pic"src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="food pic">
+            <h5>10 days left</h5>
+            <h1><%= campaign.company.name %></h1>
+            <p><%= campaign.title %></p>
+            <div class="box-align">
+              <h4>$ <%= number_with_delimiter(campaign.max_target, :delimiter => ',') %> target</h4>
+            </div>
+            <div class="target-bar">
+
+                <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
+                <% target = campaign.max_target %>
+                <% status = ((raised.to_f/target)*100).round(1) %>
+              <div>
+                <progress value=<%= status %> max="100" id="progress-bar-percentage" class="progress-bar notfull">
+                </progress>
+              </div>
+              <div class="relative"> <p><%= status %> %</p></div>
+            </div>
+
+<style>
+div.relative {
+  position: relative;
+  left: 0px;
+  bottom:23px;
+
+}
+</style>
+
+          <div class="box-align d-flex justify-content-between">
+              <div class="text-center">
+                <h4>$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
+                <p>raised</p>
+              </div>
+              <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+              </div>
+              <div class="text-center">
+                <h4><%= (campaign.return_rate*100).round(1) %>%</h4>
+                <p>interest</p>
+              </div>
+              <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
+              </div>
+              <div class="text-center">
+                <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
+                <p>investors</p>
+              </div>
+          </div>
         </div>
-      </div>
-      <div class="box-align d-flex justify-content-between">
-        <div class="text-center">
-          <h4>$79,540</h4>
-          <p>raised</p>
-        </div>
-        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-        </div>
-        <div class="text-center">
-          <h4>5%</h4>
-          <p>interest</p>
-        </div>
-        <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-        </div>
-        <div class="text-center">
-          <h4>119</h4>
-          <p>investors</p>
-        </div>
-      </div>
     </div>
-<!-- investmet card closing div -->
+      <!-- # investment card closing div -->
+      <% end %>
   </div>
+
+  <!--  -->
+
+<!--   # create_table "campaigns", force: :cascade do |t|
+  #   t.string "title"
+  #   t.string "description"
+  #   t.string "repayment_capacity"
+  #   t.string "financial_health"
+  #   t.string "company_history"
+  #   t.string "risk_level"
+  #   t.integer "min_target"
+  #   t.integer "max_target"
+  #   t.integer "loan_duration"
+  #   t.float "return_rate"
+  #   t.datetime "expiry_date"
+  #   t.bigint "company_id" -->
+
+
+  <!--  -->
+
+
+
+
