--- a/app/views/investments/index.html.erb
+++ b/app/views/investments/index.html.erb
@@ -1,1 +1,15 @@
-<h1>investments index page</h1>
+<div class="container">
+
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+      <h1 class="display-4 font-weight-normal">Investment Confirmed!</h1>
+      <p class="lead font-weight-normal">Company X</p>
+      <p>thanks you for your support</p>
+      <a class="btn btn-outline-secondary" href="/investments">Dashboard</a>
+    </div>
+    <div class="product-device shadow-sm d-none d-md-block"></div>
+    <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+  </div>
+
+</div>
+
