--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 
 <div class="navbar sticky-top navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "/scooters", class: "navbar-brand" do %>
+  <%= link_to "/campaigns", class: "navbar-brand" do %>
   <img src="https://img.icons8.com/doodle/48/000000/dining-room.png">
   <% end %>
 
