--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -5,12 +5,8 @@
    <%# else %>
 <%# end %>
 
-<div class="banner-index">
-  <div class="container">
-    <div class="text-center align-items-center">
-      <h3 class="banner-title">Fund your taste!</h3>
-    </div>
-  </div>
+<div class="banner-index d-flex align-items-center justify-content-center">
+  <h3 class="banner-title">Fund your taste!</h3>
 </div>
 
 
@@ -28,15 +24,17 @@
 <!-- insert company.photo -->
             <img class="card-pic"src="https://images.unsplash.com/photo-1498654896293-37aacf113fd9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" alt="food pic">
             <!-- <h5>10 days left</h5> -->
-            <h5><%= (campaign.expiry_date - Date.today)%> days left</h5>
+            <h5><%= ((campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
 
             <h1><%= campaign.company.name %></h1>
-            <p><%= campaign.title %></p>
+            <div style="height: 50px">
+              <p><%= campaign.title %></p>
+            </div>
+
             <div class="box-align">
               <h4>$ <%= number_with_delimiter(campaign.max_target, :delimiter => ',') %> target</h4>
             </div>
             <div class="target-bar">
-
                 <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
                 <% target = campaign.max_target %>
                 <% status = ((raised.to_f/target)*100).round(1) %>
