--- a/app/views/campaigns/shared/_showinvestor.html.erb
+++ b/app/views/campaigns/shared/_showinvestor.html.erb
@@ -45,19 +45,24 @@
         <div class="">
           <div class="card-campaign-status p-2 mb-5" style="max-width: 500px; background-color: #f4f4f4; border-radius: 20px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
             <div class="target-bar m-3" style="background-color: white; border-radius: 50px;">
-              <div class="" style="background-color: #1EDD88; width: 67%; border-radius: 50px;">
-                <p class="px-3">67%</p>
+                <% raised_sum = 0 %>
+                <% @campaign.investments.each do |investment| %>
+                <% raised_sum += investment.amount %>
+                <% end %>
+                <% progress_percentage = ((raised_sum / @campaign.min_target.to_f)*100).round(0) %>
+              <div class="" style="background-color: #1EDD88; width: <%= progress_percentage %>%; border-radius: 50px;">
+                <p class="px-3"><%= progress_percentage %>%</p>
               </div>
             </div>
 
             <div class="d-flex mt-4 justify-content-around">
               <div class="text-center">
-                <h5>###</h5>
+                <h5><%= @campaign.investments.count %></h5>
                 <p class="text-secondary mb-2" style="font-size: 12px;">investors</p>
               </div>
               <div style="border: 1px solid lightgrey; height: 50px"></div>
               <div class="text-center">
-                <h5>$##,###</h5>
+                <h5>$ <%= raised_sum %></h5>
                 <p class="text-secondary mb-2" style="font-size: 12px;">raised</p>
               </div>
               <div style="border: 1px solid lightgrey; height: 50px"></div>
@@ -69,8 +74,8 @@
           </div>
         </div>
 
-        <h4><%= @campaign.title %></h4>
-        <p><%= @campaign.description %></p>
+        <h4>Campaign Title</h4>
+        <p><%= @campaign.title %></p>
 
         <div class="card-risk-level p-3 my-5" style="width: 500px; background-color: #f4f4f4; border-radius: 20px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
           <div class="p-2 d-flex justify-content-around align-items-center" style="background-color: white; border-radius: 16px;">
@@ -91,6 +96,8 @@
 
         <h4>Company Description</h4>
         <p><%= @campaign.company.description %></p>
+        <br>
+        <br>
 
       </div>
     </div>
