--- a/app/views/investments/new.html.erb
+++ b/app/views/investments/new.html.erb
@@ -14,7 +14,7 @@
         <div class="m-0">Risk Level</div>
         <div class="d-flex justify-content-around mx-2">
           <div class="circle-icon align-self-center color-type-<%= @campaign.risk_level %>"></div>
-          <span style="font-size: 48px; font-weight: bold; margin: 0;">
+          <span style="font-size: 48px; margin: 0;">
             <p class="m-0"><%= @campaign.risk_level %></p></span>
         </div>
       </div>
